--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2840,10 +2840,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "353a34b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a young\n"
+     ]
+    }
+   ],
    "source": [
     "# if <condition>:\n",
     "#    <code>\n",
@@ -2851,7 +2859,162 @@
     "#    <code>\n",
     "# else:\n",
     "#    <code>\n",
-    "\n"
+    "\n",
+    "age = 18\n",
+    "\n",
+    "if age <= 18:\n",
+    "    print(\"You are a young\")\n",
+    "else:\n",
+    "    print(\"You are a grown up\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f66adb1a",
+   "metadata": {},
+   "source": [
+    "# **Loops**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a6b4398",
+   "metadata": {},
+   "source": [
+    "1. **For Loops**\n",
+    "\n",
+    "**NOTE:** an iterable element can be a list, dictionary, array etc.. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b0940b98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " China\n",
+      "Spain\n",
+      "Brazil\n",
+      "Newzealand\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for <create_variable> in <iterable_object(variable)>:\n",
+    "#     <code>\n",
+    "for country in countries:\n",
+    "    print(country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b400ab6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " China 0\n",
+      "Spain 1\n",
+      "Brazil 2\n",
+      "Newzealand 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using enumerate(iterable_object) function to count the number of loops\n",
+    "# for number_of_iteration, created-varaible in iterable_object.enumerate():\n",
+    "for i, country_tag in enumerate(countries):\n",
+    "    print(country_tag, i)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d59bd2db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "position center\n",
+      "size 45\n",
+      "text first\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop on a dictionary\n",
+    "# for key, value in dictionary_name.items():\n",
+    "#     <code>\n",
+    "\n",
+    "for key, value in hotspot_data.items():\n",
+    "    print(key, value)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b79348",
+   "metadata": {},
+   "source": [
+    "# **Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4591be75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum of 23 and 32 is 55\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating the function\n",
+    "# def function_name(parameters):\n",
+    "#     <code>\n",
+    "#     return value\n",
+    "\n",
+    "#calling the function\n",
+    "# function_name(arguments)\n",
+    "\n",
+    "def addition(a, b): \n",
+    "    x = a + b\n",
+    "    print(\"the sum of {} and {} is {}\".format(a, b, x)) # placing a variable within a string \n",
+    "    return x\n",
+    "\n",
+    "addition(23, 32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4357c403",
+   "metadata": {},
+   "source": [
+    "**End of Introduction.............**"
    ]
   }
  ],
