created a data frame and changed file structure

--- a/Data_science_in_python/introduction.ipynb
+++ b/Data_science_in_python/introduction.ipynb
@@ -5,7 +5,15 @@
    "id": "d6a70bff",
    "metadata": {},
    "source": [
-    "# **Introduction 😊**"
+    "# **Introduction to Data Science in Python 😊**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d19041f2",
+   "metadata": {},
+   "source": [
+    "![introduction picture](data_science.jpg)"
    ]
   },
   {
