--- a/Data_science_in_python/modules.ipynb
+++ b/Data_science_in_python/modules.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1523875",
+   "metadata": {},
+   "source": [
+    "![pandas](pandas.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8caf0874",
    "metadata": {},
    "source": [
@@ -120,11 +128,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c70ccf9b",
+   "execution_count": 1,
+   "id": "87cd0fde",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c70ccf9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>row1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>row2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>row3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      col1  col2\n",
+       "row1     3     4\n",
+       "row2     7     8\n",
+       "row3     2     0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_data = np.array([[3,4],[7,8],[2,0]])\n",
+    "\n",
+    "first_dataFrame = pd.DataFrame(first_data, index = ['row1', 'row2', 'row3'], columns = ['col1', 'col2'])\n",
+    "first_dataFrame "
+   ]
   },
   {
    "cell_type": "markdown",
